RESOLVED FIXED 50733
WebKit2 in compositing mode no longer has font smoothing
https://bugs.webkit.org/show_bug.cgi?id=50733
Summary WebKit2 in compositing mode no longer has font smoothing
Simon Fraser (smfr)
Reported 2010-12-08 20:37:28 PST
http://trac.webkit.org/changeset/73379 turned off font smoothing for all WebKit2 text when in compositing mode.
Attachments
Patch (6.57 KB, patch)
2010-12-14 14:40 PST, Simon Fraser (smfr)
adele: review+
Simon Fraser (smfr)
Comment 1 2010-12-08 20:38:10 PST
Simon Fraser (smfr)
Comment 2 2010-12-14 14:40:05 PST
Simon Fraser (smfr)
Comment 3 2010-12-15 15:37:38 PST
Note You need to log in before you can comment on or make changes to this bug.